# SagaSmith-dnd-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: long-term-memory.md
fixtures/: full_campaign_corpus.json  smoke_module.md
scripts/: regression_campaign.py  regression_encounter.py  regression_full_campaigns.py  regression_modules.py  regression_party.py  regression_playthrough.py  regression_rulebooks.py  smoke_seed.py
tests/: conftest.py  test_ability_generation_mcp.py  test_actor_event_visibility_mcp.py  test_attack_visibility_mcp.py  test_campaign_clock_mcp.py  test_character_batch_query_mcp.py  test_character_document_mcp.py  test_combat_join_mcp.py  test_combat_transaction_boundaries_mcp.py  test_config_and_skills.py  test_consumable_use_mcp.py  test_damage_policy_mcp.py  test_full_skill_parity.py  test_gateway.py  test_import_jobs_mcp.py  test_inventory_transfer_mcp.py  test_level_advancement_mcp.py  test_long_term_memory_v2_mcp.py  test_loot_acquisition_mcp.py  test_magic_item_spell_mcp.py  test_magic_missile_mcp.py  test_module_text_statblock_candidates_mcp.py  test_module_visual_atlas_mcp.py  test_multiattack_mcp.py  test_multiplayer_e2e.py  test_narrative_npc_mcp.py  test_party_rest_mcp.py  test_play_hp_change_mcp.py  test_playthrough_manifest_mcp.py  test_random_stream_mcp.py  test_reaction_defense_mcp.py  test_regression_campaign_driver.py  test_regression_encounter_driver.py  test_regression_modules_driver.py  test_regression_party_driver.py  test_regression_playthrough_driver.py  test_rest_hit_dice_mcp.py  test_rule_packs_mcp.py  (+10 more)
(+11 files in other folders)
