[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sagasmith-dnd-mcp"
version = "0.1.0"
description = "Local MCP server for the SagaSmith D&D 5e runtime and skill packs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SagaSmithAI" }]
dependencies = [
    "mcp>=1.26.0,<2.0.0",
    "sagasmith-core[vector,documents,ocr]>=0.2.0,<0.3.0",
    "sagasmith-dnd>=0.2.0,<0.3.0",
]

[project.optional-dependencies]
dense = ["sentence-transformers>=5.0.0,<6.0.0"]
gateway = ["aiohttp>=3.11.0,<4.0.0"]
dev = ["pytest>=9.0.0,<10.0.0", "ruff>=0.1.0"]

[project.scripts]
sagasmith-dnd-mcp = "sagasmith_dnd_mcp.server:main"
sagasmith-dnd-gateway = "sagasmith_dnd_mcp.gateway:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sagasmith_dnd_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.uv.sources]
sagasmith-core = { path = "../sagasmith-core", editable = true }
sagasmith-dnd = { path = "../sagasmith-dnd", editable = true }
